[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mymltoolkit"
description = 'My personal machine learning toolkit'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Chris Liu", email = "acciochris@163.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Source = "https://github.com/acciochris/mymltoolkit"

[tool.hatch.version]
path = "src/mymltoolkit/__about__.py"
