[build-system]
requires = ["flit_core >=3.8.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mymltoolkit"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Chris Liu", email = "acciochris@163.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typing-extensions",
  "scikit-learn",
  "seaborn",
  "pandas",
  "loguru",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/acciochris/mymltoolkit"

[project.optional-dependencies]
test = ["pytest"]
